refactor: Replace Teacher role with Presenter throughout codebase
- Rename TeacherHomeActivity to PresenterHomeActivity
- Rename TeacherStartSessionActivity to PresenterStartSessionActivity
- Update all UI strings from "Teacher" to "Presenter" (English and Hebrew)
- Rename layout files: activity_teacher_home.xml → activity_presenter_home.xml
- Rename layout files: activity_teacher_start_session.xml → activity_presenter_start_session.xml
- Rename menu files: menu_teacher_home.xml → menu_presenter_home.xml
- Update AndroidManifest.xml activity references
- Update role picker UI from card_teacher to card_presenter
- Update API key references from getTeacherApiKey() to getPresenterApiKey()
- Maintain backward compatibility in PreferencesManager
- Update settings UI labels from "Teacher API Key" to "Presenter API Key"

This change affects the entire user interface and maintains consistency
across all components while preserving existing functionality.

--- a/src/main/res/values-he/strings.xml
+++ b/src/main/res/values-he/strings.xml
@@ -4,7 +4,7 @@
     
     <!-- Role Selection -->
     <string name="select_role">בחר את התפקיד שלך</string>
-    <string name="teacher">מורה</string>
+    <string name="presenter">מציג</string>
     <string name="student">תלמיד</string>
     <string name="role_description">בחר את התפקיד שלך כדי לגשת לתכונות המתאימות</string>
     
@@ -14,8 +14,8 @@
     <string name="im_absent_reason">אני נעדר - סיבה</string>
     <string name="settings">הגדרות</string>
     
-    <!-- Teacher Home -->
-    <string name="teacher_home_title">לוח בקרה מורה</string>
+    <!-- Presenter Home -->
+    <string name="presenter_home_title">לוח בקרה מציג</string>
     <string name="start_session_show_qr">התחל שיעור (הצג QR)</string>
     <string name="attendance_approvals">נוכחות / אישורים</string>
     <string name="export_to_excel">ייצא לאקסל (CSV)</string>
