fix: resolve network connectivity issues and enhance attendance system
- Fix network connectivity by implementing localhost with ADB reverse port forwarding
- Add ApiConstants class for centralized API configuration and timeout settings
- Create ToastUtils class for enhanced error messaging with custom durations
- Implement ManualAttendanceRequestActivity for student manual attendance requests
- Add role-based validation to prevent presenters from marking attendance
- Fix missing API key authentication in createManualRequest endpoint
- Enhance QR scanner with comprehensive debug logging and data validation
- Update ApiClient to force localhost usage and ignore cached preferences
- Add network security configuration to allow cleartext traffic for development
- Improve error handling with detailed logging for API requests and responses
- Fix session ID and student ID validation in QR code scanning
- Add proper API key headers to all protected endpoints

Resolves: Network timeout errors, "Invalid request" errors, missing API key authentication
Improves: User experience with better error messages and role-based access control

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <!-- Student Home -->
     <string name="student_home_title">Student Dashboard</string>
     <string name="scan_attendance">Scan Attendance</string>
+    <string name="manual_attendance_request">Manual Attendance Request</string>
     <string name="im_absent_reason">I\'m Absent - Reason</string>
     <string name="settings">Settings</string>
     
