--- a/src/main/res/values-he/strings.xml
+++ b/src/main/res/values-he/strings.xml
@@ -84,8 +84,46 @@
     <!-- Settings -->
     <string name="settings_title">הגדרות</string>
     <string name="change_role">שנה תפקיד</string>
-    <string name="user_id">מזהה משתמש</string>
-    <string name="api_base_url">כתובת API בסיסית</string>
+    <string name="settings_username">שם משתמש</string>
+    <string name="settings_username_saved">שם המשתמש נשמר בהצלחה.</string>
+    <string name="welcome_user">ברוך הבא, %1$s!</string>
+    <string name="setup_title">השלמת פרופיל</string>
+    <string name="setup_header">ברוך הבא ל‑SemScan</string>
+    <string name="setup_subheader">נאגור כמה פרטים כדי להתאים עבורך את חוויית המציג והמשתתף.</string>
+    <string name="setup_first_name">שם פרטי</string>
+    <string name="setup_last_name">שם משפחה</string>
+    <string name="setup_email">כתובת דוא"ל</string>
+    <string name="setup_degree_label">תואר אקדמי</string>
+    <string name="setup_degree_placeholder">בחר/י את התואר שלך</string>
+    <string name="setup_participation_label">העדפת השתתפות</string>
+    <string name="setup_participation_placeholder">בחר/י כיצד תרצה/י להשתתף</string>
+    <string name="setup_complete_button">סיום הגדרה</string>
+    <string name="setup_degree_title">בחירת תואר</string>
+    <string name="setup_degree_prompt">באיזה תואר את/ה לומד/ת?</string>
+    <string name="setup_degree_msc">תואר שני (MSc)</string>
+    <string name="setup_degree_msc_description">סטודנטים לתואר שני מציגים פעם אחת בכל מחזור.</string>
+    <string name="setup_degree_phd">דוקטורט (PhD)</string>
+    <string name="setup_degree_phd_description">דוקטורנטים מנהלים את לוח הזמנים של המפגשים.</string>
+    <string name="setup_participation_title">בחירת אופן השתתפות</string>
+    <string name="setup_participation_prompt">איך תרצה/י להשתתף במפגשי הסמינר?</string>
+    <string name="setup_participation_presenter">מציג/ה בלבד</string>
+    <string name="setup_participation_presenter_description">אני מוביל/ה מפגשים ומנהל/ת נוכחות.</string>
+    <string name="setup_participation_participant">משתתף/ת בלבד</string>
+    <string name="setup_participation_participant_description">אני מצטרף/ת למפגשים כדי לסרוק נוכחות ולהשתתף.</string>
+    <string name="setup_participation_both">מציג/ה ומשתתף/ת</string>
+    <string name="setup_participation_both_description">אני מחליף/ה תפקידים בהתאם למחזור הסמינר.</string>
+    <string name="setup_participation_presenter_locked">דוקטורנטים נרשמים תמיד כמציגים.</string>
+    <string name="setup_msc_title">התפקיד שלי היום</string>
+    <string name="setup_msc_prompt">במחזור הנוכחי — מה מתאים לך?</string>
+    <string name="setup_msc_option_presenter">אני מציג/ה היום</string>
+    <string name="setup_msc_option_participant">אני משתתף/ת בלבד</string>
+    <string name="setup_error_first_name">אנא הזן/י שם פרטי</string>
+    <string name="setup_error_last_name">אנא הזן/י שם משפחה</string>
+    <string name="setup_error_email">אנא הזן/י כתובת דוא"ל תקינה</string>
+    <string name="setup_error_degree">אנא בחר/י תואר</string>
+    <string name="setup_error_participation">אנא בחר/י העדפת השתתפות</string>
+    <string name="setup_success">הפרופיל נשמר, אפשר להתחיל!</string>
+    <string name="network_error_generic">שגיאת רשת: %1$s</string>
     <string name="about">אודות</string>
     <string name="version">גרסה %s</string>
     
